# unfolder

./: README.md  unfolder.ru  unfolder_ruby_ver.ru
Deprecated/: unfolder_ruby_ver.ru
Deprecated/c_ver/: resource.res  unfolder.c
Deprecated/python_ver/: readme  setup.bat
c_ver/: resource.rc  resource.res  unfolder.c  unfolder.manifest
cpp_ver/: CMakeLists.txt  buckup  build.bat  config.ini  setup.bat  unfolder_wrapper.ps1
cpp_ver/src/: main.cpp  unfolder.rc
python_ver/: readme  setup.bat
